# torna-mcp

./: .env.example  .git-credentials  .gitignore  .pypirc  MCP_CLIENTS.md  PUBLISH_SUCCESS.md  PYPI_PUBLISH_GUIDE.md  README.md  RELEASE_SUMMARY.md  complete_e2e_test.py  deploy.py  main.py  pyproject.toml  setup_clients.sh  test_server.py  validate_config.py
scripts/: publish_prod.py  publish_test.py
src/torna_mcp/: main.py  refactored_client.py  refactored_server.py
tests/: __init__.py  test_refactored_client.py
