[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torna-mcp"
version = "1.0.0"
description = "一个用于与 Torna 接口文档管理平台交互的 MCP（模型上下文协议）服务器"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "阿拉丁神灯", email = "li7hai26@example.com"}
]
keywords = [
    "mcp", "torna", "api-documentation", "claude", "llm", 
    "model-context-protocol", "openapi", "documentation-management"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.3.0",
]
dynamic = ["long-description"]

[project.urls]
"Homepage" = "https://github.com/li7hai26/torna-mcp"
"Bug Reports" = "https://github.com/li7hai26/torna-mcp/issues"
"Source" = "https://github.com/li7hai26/torna-mcp"
"Documentation" = "https://github.com/li7hai26/torna-mcp/blob/main/README.md"

[project.scripts]
torna-mcp = "main:main"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.xml", "*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "test_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]